--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "url": "https://github.com/ckb-pixel/web/issues"
   },
   "homepage": "https://github.com/ckb-pixel/web#readme",
+  "browserslist": [
+    "since 2017-06"
+  ],
   "dependencies": {
-    "paper": "^0.12.4"
+    "@nervosnetwork/ckb-sdk-utils": "0.30.0",
+    "paper": "0.12.4"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.26.3",
-    "typescript": "^3.8.3"
+    "parcel-bundler": "1.12.4",
+    "sass": "1.26.3",
+    "typescript": "3.8.3"
   }
 }
