--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel ./src/index.html",
-    "build": "parcel build ./src/index.html"
+    "build": "parcel build --public-url '.' ./src/index.html"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   "dependencies": {
     "@nervosnetwork/ckb-sdk-utils": "0.30.0",
     "axios": "^0.19.2",
+    "bn.js": "^5.1.1",
     "paper": "0.12.4"
   },
   "devDependencies": {
